--- a/Two-Dimensional_Tensors.ipynb
+++ b/Two-Dimensional_Tensors.ipynb
@@ -1015,15 +1015,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result of X * Y:  tensor([[2, 1, 2],\n",
-      "        [3, 0, 4]])\n"
+      "The result of X * Y:  tensor([[0, 2],\n",
+      "        [0, 2]])\n"
      ]
     }
    ],
@@ -1031,10 +1031,10 @@
     "# Practice: Calculate the product of two tensors (X and Y) with different sizes \n",
     "\n",
     "# Type your code here\n",
-    "X = torch.tensor([[0, 1], [1, 2]])\n",
-    "Y = torch.tensor([[-1, -2, 0], [2, 1, 2]])\n",
-    "X_times_Y = torch.mm(X, Y)\n",
-    "print(\"The result of X * Y: \", X_times_Y)"
+    "A = torch.tensor([[0, 1, 1], [1, 0, 1]])\n",
+    "B = torch.tensor([[1, 1], [1, 1], [-1, 1]])\n",
+    "A_times_B = torch.mm(A,B)\n",
+    "print(\"The result of X * Y: \", A_times_B)"
    ]
   },
   {
